fixed spacing of the pictures

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
   }
 
   button {
-    margin-left: 40px;
+    padding-left: 40px;
     box-shadow: none;
   }
 
