--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,7 @@
 .navbar-lewagon .navbar-brand img {
   width: 100px;
 }
+
+.my-navbar {
+  width: 105%;
+}
